# ChangeLog for sys-apps/sed
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/ChangeLog,v 1.127 2014/02/08 13:24:00 vapier Exp $

  08 Feb 2014; Mike Frysinger <vapier@gentoo.org> -files/dos2unix,
  -files/unix2dos, sed-4.2.1-r1.ebuild, sed-4.2.1.ebuild, sed-4.2.2.ebuild,
  sed-4.2.ebuild:
  Drop ancient/unloved examples #500550 by Ulrich Müller.

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> sed-4.2.2.ebuild:
  Depend on libselinux when USE=selinux #408213 by Markus Knetschke.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> sed-4.2.2.ebuild:
  Add hack for gnulib acl check when cross-compiling #333887 by Luca Barbato.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> sed-4.2.1-r1.ebuild,
  sed-4.2.2.ebuild:
  Add arm64 love.

*sed-4.2.2 (25 Dec 2012)

  25 Dec 2012; Mike Frysinger <vapier@gentoo.org> +sed-4.2.2.ebuild:
  Version bump.

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> sed-4.2.1-r1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #427118

  01 Aug 2012; Tony Vroon <chainsaw@gentoo.org> sed-4.2.1-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani & Tomáš "Mepho" Pružina in bug #427118.

  24 Jul 2012; Jeroen Roovers <jer@gentoo.org> sed-4.2.1-r1.ebuild:
  Stable for HPPA (bug #427118).

  23 Jul 2012; Markus Meier <maekke@gentoo.org> sed-4.2.1-r1.ebuild:
  arm stable, bug #427118

  21 Jul 2012; Anthony G. Basile <blueness@gentoo.org> sed-4.2.1-r1.ebuild:
  Stable ppc/ppc64, bug #427118

  21 Jul 2012; Jeff Horelick <jdhore@gentoo.org> sed-4.2.1-r1.ebuild:
  marked x86 per bug 427118

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> sed-4.2.1-r1.ebuild:
  keyword ~amd64-fbsd

  19 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sed-4.2.1-r1.ebuild:
  Revert last commit in favour of using m4/selinux-selinux-h.m4.

  15 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> sed-4.2.1-r1.ebuild: