@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=nls? ( virtual/libintl ) acl? ( virtual/acl ) nls? ( sys-devel/gettext )
-DESCRIPTION=Super-useful stream editor
-HOMEPAGE=http://sed.sourceforge.net/
-IUSE=acl nls static
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc ~sparc-fbsd x86 ~x86-fbsd
-LICENSE=GPL-3
-RDEPEND=nls? ( virtual/libintl ) acl? ( virtual/acl )
-SLOT=0
-SRC_URI=mirror://gnu/sed/sed-4.2.tar.bz2
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=e25d7341d8e184d2de88109a38b0ca9a
