@@ -9,4 +9,4 @@ RDEPEND=acl? ( virtual/acl ) nls? ( virtual/libintl )
 SLOT=0
 SRC_URI=mirror://gnu/sed/sed-4.2.1.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=3daa4f0e87b3c5fa4efaf568f5dd9067
+_md5_=8ccdec82ae26d0b8bdcbbffd34554c17
