@@ -9,4 +9,4 @@ RDEPEND=acl? ( virtual/acl ) nls? ( virtual/libintl ) selinux? ( sys-libs/libsel
 SLOT=0
 SRC_URI=mirror://gnu/sed/sed-4.2.2.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=82f8c6572dd265566d7f62cc0e421d1e
+_md5_=db2a39b2826ce5bee1520c518ac871f8
