@@ -2,10 +2,7 @@ AUX sed-4.1.5-alloca.patch 413 SHA256 9b371d7e3db5f6955536b4c4a23739b7d84448b986
 AUX sed-4.2.1-handle-incomplete-sequences-as-if-they-were-invalid.patch 1507 SHA256 11e8585a1ca572aa48632903040b3c81be75c764a401ede121f83c4555435746 SHA512 ceeebddd7b64dc8675936d19812580c46c462fc6c102acb68b07cf4333b53721eebd744cbaca423644f8c8377e645a224d86cf928b6d5dbb6b538c6e26d3271f WHIRLPOOL ef70156dd924b25cad0193f1579e5e880e47f133c03c9f301a895f56d8a316d8d0953b4a58fbde3bf11348d46727d7afa520c46c76337082537bc8be718ee614
 DIST sed-4.2.1.tar.bz2 899091 SHA256 2ac3b36ca37bfeb43c4ef4025778cd66d89c77abb843d90552a515a7c9d2948f SHA512 273d4d0b3dd41a3966260fbe261a20110a2a4c0749e11a080f4fc8694e47b605cb977f2535b20b92d57b1b74129df092ba47f4184951dbc3f0f14fd9b91b7bfd WHIRLPOOL 426b244431cb00a8c8f7320f22cf0a5de3165a43d9d6fb8343163e1d4054d61b2737a697ebe54311cf5d2d2f696d2f07877a41b8710ad80d96a7d5138fff07e1
 DIST sed-4.2.2.tar.bz2 1059414 SHA256 f048d1838da284c8bc9753e4506b85a1e0cc1ea8999d36f6995bcb9460cddbd7 SHA512 dbbb0bb348fac54612d29182c09c88bda7096dea03bd94f03c580c24146e65a06db12808c6a1a9adc94548fa3843511e3e80b251cb07142110cf149eab23f573 WHIRLPOOL d816657c51a2718c2b309455facaff50c9da08b79d20985ab1d61faa5b42bffa0b33ea7d3368a8cdaa6079891cfc27cdab38788563c8323081580b4478c7e2b5
-DIST sed-4.2.tar.bz2 882586 SHA256 ee7755e3ab038e7deecebdf44fd43ad65a96890962c3b44206cce672368b45c8 SHA512 81bccd2664572dee0c9129fd5fda0761341dfb03e5252506b0369d8e91c242029693ccb67858943b9b469d399bceb4833f53ac7cca1b610a42f164d84f2339f9 WHIRLPOOL 8801b9a6356a5bbfb9436709189415dba40933be799622bc9db7644efe06b11ddeb5e256fda598f5d14aea54758882d5a818e65413e07901c9fda45258746681
-EBUILD sed-4.2.1-r1.ebuild 1905 SHA256 e87554f5f13b72a098f780216f1b40d5ddb687a2fbbb9dd067b0bdc9a2ec9558 SHA512 dbc6e9ed1f0e3ab15f7aa48c2d34277c9dcd439fefe82e93f63a362177a8fe6416bf15588bdb18ef0c8b33f364082c2fd6b8d2b72c36912a6ceecbf7f8e89cfd WHIRLPOOL 679f53cffbed95be02a42fb368cbd2cd4b32764b8b2a7a067e4a457ffbbe931ddbd433a21677b12362a9cf922681ea008c0decdab65b4dcc1832f45f30526812
-EBUILD sed-4.2.1.ebuild 1791 SHA256 08ead1842d303ee9e46603acee6308590a98a3998e75c339d64e44363d1fc90c SHA512 b2be4342158d6ab9e509f247d821b1512f979eed70afce4afabbb1250adeae4df52644698e6fb74c3fce07a17ca6580aba96d3788176ff19450950fa130b15cd WHIRLPOOL abf2ca9b7c3abaf0823a09e759ec8b412a94efb7da74c9fbc3379650486fd0a1eb2ebd332e78cb94c1934ed204a9801ab19f6b8eeeb56b11b97ee26c5113b48f
-EBUILD sed-4.2.2.ebuild 1984 SHA256 8a053eeac282762dec916fea29a4afa6f140db752d589683cc857d0159c5bd9c SHA512 081e3b6f6df4a721ceacafeb41f5578c323b7898ee5a430a1c5c876d71f06d87976b945030466b1302f96afd5cca8c5538993c3d30e469b8202f7420a9e31ca7 WHIRLPOOL 398b9e10fe4fd1998ceef9d2ad1fd4573afe2711e6927cb2242609aecf4fd7f0e81c49a921e007b459575b4cacc597110bbfa2dca04e739d12f20fffd165e4ca
-EBUILD sed-4.2.ebuild 1658 SHA256 c13f9e6299b53ab1b19f6e8709101094ab30e702d76acbfb51c38543e7c8efd3 SHA512 f5687f57d149ae21476f3a41fbf33b48a37f20a11715c2223fad578550ccfcab59c0d093cd6a8ba1a8640694580d2033decee7121b19caa8b7efb720fb075929 WHIRLPOOL e845080af3e119d72f8ec1f66c6c6d2a8bdd391be2c8ae38dcf9387c773e31f4851ce4b1dcc9082a9951297ab247552df1927fe0e9b550e6021047ce029df567
-MISC ChangeLog 16403 SHA256 a451c7ebaa0f7050b684c5ea0e43721ef7b4af9493def943f1a6295be4f8e2b8 SHA512 4414d88a9cd4bcef18754f2f4cbf35b3c31438a5a85cccd9601303086ca4d99ec14fd64ab49c909e16f9fabc874333fe7c4ff14da02715538ea53690af971d47 WHIRLPOOL 0437ad3f414187ec21af14c2c0024a2b0ec694ef5076c220bc3080d3439673e670ca3157b6eed55c3a4d8c322b60a4110a10acba6d34fcb290ed9a0b96ae2e5d
-MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
+EBUILD sed-4.2.1-r1.ebuild 1804 SHA256 bb817eb07b97686fc6c6b4ba429fe8b490b192802e7fde6e633dec16ec4ed752 SHA512 deff6ad5092f728683732aa48987b32e0c994ef926a593f89c4dd395e10e5245d4212ec1d85edbaa9b85b84e26cf8226f574e09f17437a2d71d850d516f3f847 WHIRLPOOL 5b792135d7ed31af1ee627687446b6583dc22d014a2f1db0817ed060000a867b1cc6fe10bb603ae325838bb32ce1bc20bae8b5ce134a4b85a60dc70c3639fd01
+EBUILD sed-4.2.2.ebuild 1887 SHA256 3f9f5e7c5274d5cd17f3219c31e037762126542cdcbafb037ccec5d20be84396 SHA512 2dc2384da2396538e3f3a74c1dc3d429b3e1f8663874f21ff0a3e1edb588fb2a99a0633dd2ae49ef548790d39716ccd8c455c66326e1600abd492e857dcdbb4a WHIRLPOOL c051e1ff536feea93233ab551efbddafa4778d6e300e6448cec11f8f9af595f60aa70dc9b21fefd7079c35fa3f1555c92e970daa91211e77dab9336600bb873a
+MISC ChangeLog 16503 SHA256 4ea4cf5813c3e62b75043c34314486e774f96cab7bffb94e11a90303f9140f82 SHA512 40c7fcca90187b31b54045a09fdc7ea6b8581ec37f88eb05e3df41ecb2d49d2ddffab1c84c0faacfae5151a148ee2d22d51acd3629225aa64b6596f401a8a669 WHIRLPOOL 5e9ba487e404f2be4cb200b8dc4e870e9846e4752b4bca683bad1fac63af55a582bfbcd001e9b7254320cdcc8ca88ef2ab2d3cb29fc28f39a93943bb8d298f7b
+MISC metadata.xml 238 SHA256 ee59c06e2649c6f22b803a4e7a98302c87c76b681175ab3a0609452c90a96a6d SHA512 421821093b8a3c7ef7d340a8b648b717bdf26a0fd651c948b21e8062df81142bd210c94f299c789380036a58d376dfa0dc60cf0fbe9986d2d15eb969e920c995 WHIRLPOOL f450a1f323f4afd5c37a1e75e7a98a47a210d3dee898a44088b8a46369d7ebfa80a3c0f97b0c201a7aa3bd4d8bf46cc6a20f79ee953881140715c537b4e62e0a
