@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>base-system</herd>
+	<herd>base-system</herd>
+	<upstream>
+		<remote-id type="sourceforge">sed</remote-id>
+	</upstream>
 </pkgmetadata>
